# ApacheAirflow

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
config/: airflow.cfg
dags/: testdag.py
dags/adhoc/: dummy_dag.py
dags/coursera/: bashops_dag.py
dags/daily/: testdag.py
